# earth-data-fetcher

./: .gitignore  404.html  Makefile  data_sources.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: documentation.yml
api/download_https/: index.html
api/download_xarray/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: download_https.md  download_xarray.md
docs/user-guide/: data-sources.md  oceansoda-sources.md
notebooks/: test.ipynb
search/: search_index.json
src/earth_data_fetcher/: __init__.py  download_dataset.py  download_https.py  download_xarray.py  utils.py
user-guide/data-sources/: index.html
user-guide/oceansoda-sources/: index.html
