[project]
name = "earth-data-fetcher"
version = "0.1.3"
description = "Fetch remote sensing and reanalysis data from different sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10",
    "copernicusmarine>=2.0.0",
    "fsspec>=2024",
    "jinja2>=3",
    "loguru>=0.7",
    "munch>=3",
    "pip>=23",
    "pydap>=3.5.3",
    "python-dotenv>=1.0",
    "requests>=2",
    "s3fs>=2024",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.13.0",
    "pytest>=7.0.0",
]
